--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-156.3KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-227.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-243.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-704.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-250.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-232.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-238.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-270.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-584.2KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇦 加拿大-246.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-344.0KB/s(Youtube:不良林), server: 8.219.49.108, port: 35829, type: vmess, uuid: aaca3cd9-db04-4668-cbfe-53c43d33ab19, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1002.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-938.9KB/s(Youtube:不良林), server: 104.156.229.148, port: 36788, type: vmess, uuid: 9fee7249-69fb-490d-e617-cfb54a249932, alterId: 60, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.156.229.148}}
+  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: azhk.sharecentre.xyz, port: 58975, type: vmess, uuid: f0e9aff1-ba59-4af4-f3a1-6d17fffb4aca, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /Sharecentrepro, ws-headers: {Host: azhk.sharecentre.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-156.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-227.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-243.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-704.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-250.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-232.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-270.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-246.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1002.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-938.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
