--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-470.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇫🇷 法国-293.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-344.0KB/s(Youtube:不良林), server: 8.219.49.108, port: 35829, type: vmess, uuid: aaca3cd9-db04-4668-cbfe-53c43d33ab19, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-318.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇮🇹 意大利-307.9KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-310.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-431.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-884.1KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-423.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-368.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-152.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-602.0KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-584.2KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-311.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-357.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
+  - {name: 🇺🇸 美国-254.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-364.0KB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-293.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-344.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.5KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-307.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-310.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-884.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
