--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-368.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-152.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-602.0KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-584.2KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-311.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-357.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
-  - {name: 🇺🇸 美国-254.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-364.0KB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇸🇬 新加坡-1.14MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-200.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-431.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-423.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-223.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-267.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-248.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-232.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-368.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-152.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-602.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-584.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-311.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-254.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-364.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-212.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
